GOtovo za lansiranje num 3.
Sredjeni jos neki bagovi. JOS: za navigation onaj ^ u logo kad se menja tema na ios. Recipecard: mobile flex-grow i max-width i proveriti overflow/border-radius za iOS. Kategorije: proveriti svg color gradient za dark i gap izmedju ikone i naziva kategorije. Error handling za search ne moze onako kako sam zamislila. Reseno drugacije. Uz interakciju sa korisnikom (refresh za novi api key)

--- a/assets/sass/abstract/_mixins.scss
+++ b/assets/sass/abstract/_mixins.scss
@@ -26,11 +26,22 @@
             @content;
         } // 660/16
     }
+    @if $bp == tab-landrot {
+        @media only screen and (max-width: 56.25em) and (orientation: landscape) {
+            @content;
+        } // 500/16
+    }
     @if $bp == tab {
         @media only screen and (max-width: 56.25em) {
             @content;
         } // 900/16
     }
+
+    // @if $bp == tab-n-landpos {
+    //     @media only screen and (max-width: 56.25em) {
+    //         @content;
+    //     } // 900/16
+    // }
     @if $bp == tab-mid {
         @media only screen and (max-width: 65.625em) {
             @content;
