--- a/assets/sass/abstract/_extends.scss
+++ b/assets/sass/abstract/_extends.scss
@@ -153,3 +153,7 @@
 %transform-3d-0 {
     transform: translate3d(0, 0%, 0);
 }
+
+%scroll-smooth-iphone {
+    -webkit-overflow-scrolling: touch;
+}
