--- a/assets/sass/layouts/_recipecards.scss
+++ b/assets/sass/layouts/_recipecards.scss
@@ -184,6 +184,12 @@
         -moz-backface-visibility: hidden;
         backface-visibility: hidden;
         z-index: 2;
+        -webkit-transform: translateZ(0);
+        -webkit-mask-image: -webkit-radial-gradient(
+            circle,
+            white 100%,
+            black 100%
+        ); //! navodno za border-radius i overflow: hidden za iOS
 
         &--bg-none {
             background-image: none;
