--- a/assets/sass/layouts/_middle.scss
+++ b/assets/sass/layouts/_middle.scss
@@ -4,6 +4,7 @@
     padding: 0 var(--padding-middle);
     display: grid;
     align-content: flex-start;
+    justify-content: center;
     grid-gap: 5vw;
     scroll-behavior: smooth;
     @extend %scroll-smooth-iphone;
