--- a/assets/sass/abstract/_vars.scss
+++ b/assets/sass/abstract/_vars.scss
@@ -13,6 +13,7 @@
     --padding-home: 2vw;
     --padding-middle: 5vw;
     --nav-sidebar-height: calc(100vh - calc(2 * var(--padding-home)));
+    --hooper-ingr-bottom: 4rem;
 
     // SIZES
     --category-width: 14rem;
@@ -47,9 +48,15 @@
     --z-search: 100;
     --z-preloader: 1000;
 
+    // @include device(laptop) {
+    //     --hooper-ingr-bottom: 3rem;
+    // }
     @include device(phone) {
         --box-shadow-alpha-spread: 6px;
     }
+
+    // color: #00e6a8;
+    // color: #02caca;
 }
 
 body,
