--- a/assets/sass/components/_hooper.scss
+++ b/assets/sass/components/_hooper.scss
@@ -1,32 +1,34 @@
 .hooper {
+    @extend %scroll-smooth-iphone;
+
     &-track {
         @extend %d--grid;
         grid-auto-flow: column;
         transition: transform 1s $outSmooth;
+        @extend %scroll-smooth-iphone;
     }
 }
 
 .categories .hooper {
     min-height: 28rem;
     z-index: var(--z-hooper-cat);
-    @extend %scroll-smooth-iphone;
 
-    @include device(phone-land) {
-        padding: 0 2rem;
-    }
+    // background-color: hsl(var(--clr_accent) / 0.1);
+    // border-radius: var(--radius-category);
+    // padding: 2rem;
 
     &-track {
         @extend %d--grid;
         justify-content: flex-start;
         align-content: center;
-        padding: 4rem 0;
-        @extend %scroll-smooth-iphone;
+        // padding: 4rem 0;
     }
     &-slide {
         max-width: calc(6rem + var(--category-width));
     }
     &-pagination {
-        bottom: -1rem !important;
+        bottom: 0rem !important;
+        transform: translateX(50%) translateY(1rem);
 
         li {
             display: none;
@@ -141,7 +143,7 @@
 .ingredients .hooper {
     height: max-content;
     max-height: 24rem;
-    margin-bottom: 2rem;
+    margin-bottom: calc(var(--hooper-ingr-bottom) * 1.5);
 
     &-list {
         @include device(phone-land) {
@@ -152,18 +154,10 @@
     &-track {
         @extend %d--grid;
         justify-content: flex-start;
-        grid-gap: 3rem;
         height: auto;
-        padding-top: 3rem;
-        margin-bottom: 5rem;
     }
-    &-slide {
-        min-width: 16rem;
-        max-width: 18rem;
-
-        @include device(phone-land) {
-            max-width: max-content;
-        }
+    &-pagination {
+        transform: translateX(50%) translateY(var(--hooper-ingr-bottom));
     }
     &-pagination,
     &-indicators {
@@ -171,6 +165,9 @@
         padding: 0;
     }
     &-indicator {
+        width: 1.5rem;
+        height: 0.3rem;
+        margin: 0 3px;
         background: hsl(var(--clr_white));
         transition: background-color 0.3s, opacity 0.3s;
 
@@ -181,13 +178,14 @@
         }
         &.is-active {
             background: hsl(var(--clr_black));
+            opacity: 0.6;
         }
     }
 
     &-prev,
     &-next {
         --btn_pos: -12%;
-        top: 60%;
+        top: 50%;
         opacity: 0.4;
         transform: translateY(-50%);
         transition: opacity 0.5s;
@@ -200,13 +198,13 @@
             transition: transform 0.5s $outBack;
         }
 
-        @include device(phone-land) {
-            width: 1rem;
-            height: 1rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+        // @include device(phone-land) {
+        //     width: 1rem;
+        //     height: 1rem;
+        //     display: flex;
+        //     align-items: center;
+        //     justify-content: center;
+        // }
     }
 
     &-prev {
