--- a/assets/sass/layouts/_sidebar.scss
+++ b/assets/sass/layouts/_sidebar.scss
@@ -3,7 +3,7 @@
     @extend %nav-sidebar-shared;
     @extend %d--grid;
     justify-content: center;
-    grid-gap: 2rem;
+    grid-gap: 2rem 0;
     padding: 5vh 2vw;
     overflow-y: scroll;
 
