--- a/assets/sass/pages/_recipeitem.scss
+++ b/assets/sass/pages/_recipeitem.scss
@@ -267,18 +267,19 @@
         gap: 3vw;
         background: var(--clr_recipeitem_right_bg);
         border-radius: var(--radius-recipeitem-breadcrumb);
-        margin-bottom: 3.5vw;
+        // margin-bottom: 3.5vw;
+        margin-bottom: 6rem;
 
         @include device(tab-mid) {
-            margin-bottom: 6rem;
+            margin-bottom: 8rem;
         }
-
         @include device(phone) {
             display: flex;
             flex-direction: row;
             justify-content: center;
             flex-wrap: wrap;
-            margin: 2rem 0 7rem 0;
+            margin-top: 2rem;
+            // margin: 2rem 0 7rem 0;
         }
     }
 
