--- a/assets/sass/base/_global.scss
+++ b/assets/sass/base/_global.scss
@@ -49,6 +49,7 @@ img {
 //     z-index: 200000;
 //     pointer-events: none;
 //     background: var(--clr_grd_bg);
+//     opacity: 0.2;
 
 //     &::before {
 //         content: 'desktop';
