--- a/assets/sass/layouts/_navigation.scss
+++ b/assets/sass/layouts/_navigation.scss
@@ -46,12 +46,28 @@
             }
 
             &::before {
-                --translate: translate(-100%, 20px);
+                --translate-x: -100%;
+                --translate-y: 20px;
+            }
+
+            @include device(tab-landrot) {
+                transform: translateX(5%);
+
+                &::before {
+                    --translate-x: -80%;
+                    --translate-y: 16px;
+                }
+            }
+
+            @include device(tab-to-phoneland) {
+                transform: translateX(0%);
             }
         }
 
         &::before {
-            --translate: translate(-50%, 13px);
+            --translate-x: -50%;
+            --translate-y: 13px;
+            --translate: translate(var(--translate-x), var(--translate-y));
             --size: 0.6rem;
             content: '';
             @extend %pos-abs;
@@ -65,6 +81,10 @@
             transform: var(--translate) scale(0);
             transition: transform 0.5s $outSmooth;
             z-index: var(--z-nav-tooltip);
+
+            @include device(tab-landrot) {
+                --translate-y: 10px;
+            }
         }
 
         &::after {
