--- a/assets/sass/pages/_bookmarks.scss
+++ b/assets/sass/pages/_bookmarks.scss
@@ -5,7 +5,6 @@
         align-self: flex-start;
         @extend %w-100;
     }
-
     .header {
         margin-bottom: 2rem;
     }
@@ -22,7 +21,7 @@
 
         @include device(tab-to-phoneland) {
             margin-top: 20vh;
-            width: 100vw;
+            width: 100%;
         }
 
         .icontainer--bggreen {
