--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -21,12 +21,13 @@
     }
 
     @include device(tab-to-phoneland) {
-        display: block;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        min-height: 100vh;
+        height: 100%;
         padding-right: var(--padding-home);
         padding-bottom: 22vh;
-
-        width: 100vw;
-        overflow-x: hidden;
     }
 
     @include device(phone) {
