--- a/assets/sass/layouts/_middle.scss
+++ b/assets/sass/layouts/_middle.scss
@@ -3,8 +3,7 @@
 
     padding: 0 var(--padding-middle);
     @extend %w-100;
-    // scroll-behavior: smooth;
-    // @extend %scroll-smooth-iphone;
+    // overflow: visible;
 
     @include device(tab-to-phoneland) {
         --padding-middle: 0;
@@ -12,7 +11,6 @@
 
     .scroll-to {
         padding-top: 8rem;
-        @extend %scroll-smooth-iphone;
         @extend %w-100;
 
         @include device(laptop) {
