--- a/assets/sass/pages/_bookmarks.scss
+++ b/assets/sass/pages/_bookmarks.scss
@@ -20,8 +20,7 @@
         @extend %h-100;
 
         @include device(tab-to-phoneland) {
-            margin-top: 20vh;
-            width: 100%;
+            width: 100vw;
         }
 
         .icontainer--bggreen {
