fix and style: nav i sidebar animacija, nav sticky u landrot
BREAKING CHANGE:
    - dodate animacije kad je mounted za nav i sidebar jer mi se nije svidjalo kako nav izgleda kad se ucita str na tab-to-phoneland
    - nav za tab-landrot je ipak sticky, a ne fixed, jer se kategorije overlapuju na nav. A sticky samo ne radi na iOS 12 <

TODO:
    - videti zasto vercel ne koristi sve apis iz env. U lokalu kad radim imam jos requesta, a na hostu ne

--- a/assets/sass/base/_global.scss
+++ b/assets/sass/base/_global.scss
@@ -49,6 +49,7 @@ img {
 //     z-index: 200000;
 //     pointer-events: none;
 //     background: var(--clr_grd_bg);
+//     opacity: 0.4;
 
 //     &::before {
 //         content: 'desktop';
