--- a/assets/sass/abstract/_animations.scss
+++ b/assets/sass/abstract/_animations.scss
@@ -10,12 +10,70 @@
     &-enter,
     &-leave-to {
         @extend %opacity-0;
-        transform: translate3d(0, 100%, 0);
+        transform: translate3d(0, 100vh, 0);
     }
     &-enter-to,
     &-leave {
         @extend %opacity-1;
         @extend %transform-3d-0;
+    }
+}
+.nav {
+    &-enter-active {
+        @extend %will-change;
+        backface-visibility: hidden;
+        transition: transform 1s $outCirc, opacity 0.6s $outSmooth;
+        transition-delay: 0.2s;
+
+        @include device(tab-to-phoneland) {
+            transition-delay: 1.2s;
+        }
+    }
+    &-enter {
+        @extend %opacity-0;
+        transform: translate3d(-100%, 0, 0);
+
+        @include device(tab-to-phoneland) {
+            transform: translate3d(-50%, 120%, 0);
+        }
+    }
+    &-enter-to {
+        @extend %opacity-1;
+        @extend %transform-3d-0;
+
+        @include device(tab-to-phoneland) {
+            transform: translate3d(-50%, 0, 0);
+        }
+    }
+}
+.sidebar {
+    &-enter-active {
+        @extend %will-change;
+        backface-visibility: hidden;
+        transition: transform 1s $outCirc, opacity 0.6s $outSmooth;
+        transition-delay: 0.2s;
+
+        @include device(tab-land) {
+            transition: none;
+        }
+    }
+    &-enter {
+        @extend %opacity-0;
+        transform: translate3d(100%, 0, 0);
+
+        @include device(tab-land) {
+            opacity: 0;
+            transform: none;
+        }
+    }
+    &-enter-to {
+        @extend %opacity-1;
+        @extend %transform-3d-0;
+
+        @include device(tab-land) {
+            transform: none;
+            opacity: 0;
+        }
     }
 }
 
