--- a/assets/sass/abstract/_extends.scss
+++ b/assets/sass/abstract/_extends.scss
@@ -150,7 +150,7 @@
     will-change: transform, opacity;
 }
 %transform-3d-0 {
-    transform: translate3d(0, 0%, 0);
+    transform: translate3d(0, 0, 0);
 }
 
 %scroll-smooth-iphone {
